[package]
name = "marlinflow-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
syzygy = ["dep:cc"]
bindgen = ["dep:bindgen"]

[build-dependencies]
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.65.1", optional = true }

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
marlinformat = { path = "../marlinformat" }
rand = "0.8.5"
bytemuck = "1.10.0"
cozy-chess = "0.2.2"
tempfile = "3.3.0"
memmap = "0.7.0"